# lautrek-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  litestream.yml  pyproject.toml
.do/: app.yaml
client/: pyproject.toml
client/productname/: __init__.py  mcp_server.py
docs/: CUSTOMIZATION.md
server/: pyproject.toml
server/src/: __init__.py  config.py
server/src/api/: main.py
server/src/auth/: __init__.py  api_keys.py  middleware.py  password.py  sessions.py
server/src/billing/: __init__.py  rate_limiter.py
server/src/db/: __init__.py  connection.py
server/src/templates/: base.html
server/src/templates/docs/: doc_base.html
server/src/templates/pages/: docs.html  home.html  login.html  pricing.html  signup.html
