[project]
name = "productname"
version = "0.1.0"
description = "MCP adapter for productname"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0", "httpx>=0.28.0"]

[project.scripts]
productname = "productname.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
